--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
