--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'com.hbb20:ccp:2.3.1'
+    implementation 'com.chaos.view:pinview:1.4.3'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
